# matchbox-panel-2

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  matchbox-panel.pc.in
applets/: Makefile.am  Makefile.applets  clock.c  launcher.c
applets/battery/: Makefile.am  battery-acpi.c  battery-apm.c  battery.c  battery.h
applets/battery/data/: Makefile.am
applets/brightness/: Makefile.am  brightness.c
applets/brightness/data/: Makefile.am
applets/clock/: Makefile.am  clock.c
applets/common/: test_main.c
applets/exit/: Makefile.am  exit.c
applets/launcher/: Makefile.am  launcher.c
applets/notify/: Makefile.am  applet.c  mb-notification.c  mb-notification.h  notification-manager.xml  notify-store.c  notify-store.h
applets/showdesktop/: Makefile.am  showdesktop.c
applets/startup/: Makefile.am  startup.c
applets/startup-notify/: Makefile.am  startup.c
applets/startup/data/: Makefile.am
applets/systray/: Makefile.am  fixedtip.c  na-tray-manager.c  na-tray.c  systray.c
applets/windowselector/: Makefile.am  windowselector.c
data/: Makefile.am
matchbox-panel/: Makefile.am  mb-panel-scaling-image.c  mb-panel-scaling-image.h  mb-panel-scaling-image2.c  mb-panel-scaling-image2.h  mb-panel.c  mb-panel.h
po/: ChangeLog  Makevars  POTFILES.in
