SUBDIRS = matchbox-panel applets data po

pcdatadir = $(libdir)/pkgconfig
dist_pcdata_DATA= matchbox-panel.pc

MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL)

-include $(top_srcdir)/git.mk
