icondir = $(datadir)/icons/hicolor

icon16dir = $(icondir)/16x16/apps
dist_icon16_DATA = $(wildcard $(srcdir)/16x16/*.png)

icon22dir = $(icondir)/22x22/apps
dist_icon22_DATA = $(wildcard $(srcdir)/22x22/*.png)

icon32dir = $(icondir)/32x32/apps
dist_icon32_DATA = $(wildcard $(srcdir)/32x32/*.png)

icon48dir = $(icondir)/48x48/apps
dist_icon48_DATA = $(wildcard $(srcdir)/48x48/*.png)

icon64dir = $(icondir)/64x64/apps
dist_icon64_DATA = $(wildcard $(srcdir)/64x64/*.png)

-include $(top_srcdir)/git.mk
